--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,14 +4,19 @@
   "private": true,
   "dependencies": {
     "@radix-ui/react-select": "^2.2.5",
+    "@tailwindcss/vite": "^4.1.10",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.522.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "tailwind-variants": "^1.0.0",
     "tailwindcss-animate": "^1.0.7",
@@ -40,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
