Added OpenAI integration

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,6 @@ DB_USER=admin
 DB_HOST=studydb.c76cc20sodsu.eu-north-1.rds.amazonaws.com
 DB_NAME=studydb
 DB_PORT=3306
+
+# OpenAI API Configuration
+OPENAI_API_KEY=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
