--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ DB_USER=admin
 DB_HOST=studydb.c76cc20sodsu.eu-north-1.rds.amazonaws.com
 DB_NAME=studydb
 DB_PORT=3306
+SUPABASE_URL=https://vhuxlodxugpwodorwwzq.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=sb_secret_iRWiJzUEwwbHNFA3A5LIUg_w_b9pmrh
