--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
 REACT_APP_API_URL=http://localhost:3000
+VITE_SUPABASE_URL=https://vhuxlodxugpwodorwwzq.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key-here
