--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,15 @@
   "homepage": "https://AlizaRK.github.io/hmi-ai-prompting",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-select": "^2.2.5",
+    "@supabase/supabase-js": "^2.52.1",
     "@tailwindcss/vite": "^4.1.10",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.522.0",
     "primeicons": "^7.0.0",
